Source/WebCore/rendering/RenderCombineText.cpp
@@ -44,16 +44,16 @@ void RenderCombineText::styleDidChange(StyleDifference diff, const RenderStyle* 
     RenderText::styleDidChange(diff, oldStyle);
 
     if (m_isCombined) {
-        RenderText::setTextInternal(originalText()); // This RenderCombineText has been combined once. Restore the original text for the next combineText().
+        RenderText::setRenderedText(originalText()); // This RenderCombineText has been combined once. Restore the original text for the next combineText().
         m_isCombined = false;
     }
 
     m_needsFontUpdate = true;
 }
 
-void RenderCombineText::setTextInternal(const String& text)
+void RenderCombineText::setRenderedText(const String& text)
 {
-    RenderText::setTextInternal(text);
+    RenderText::setRenderedText(text);
 
     m_needsFontUpdate = true;
 }
@@ -137,7 +137,7 @@ void RenderCombineText::combineText()
 
     if (m_isCombined) {
         DEPRECATED_DEFINE_STATIC_LOCAL(String, objectReplacementCharacterString, (&objectReplacementCharacter, 1));
-        RenderText::setTextInternal(objectReplacementCharacterString.impl());
+        RenderText::setRenderedText(objectReplacementCharacterString.impl());
     }
 }
 
